use Modules and import/export

--- a/amazon.html
+++ b/amazon.html
@@ -18,9 +18,8 @@
     <link rel="stylesheet" href="styles/shared/amazon-header.css">
     <link rel="stylesheet" href="styles/pages/amazon.css">
     <!--THE PROJECT BASICALLY LOADED THE DATAS OF PRODUTS IN DATA/PROCUTS AND THEN CREATE THE HTML IN THE LOOP USING THE AMAZON.JS-->
-    <script src ="/data/cart.js"> </script>
     <script src ="/data/products.js"> </script>
-    <script src ="/scripts/amazon.js"> </script>
+    <script type ='module'src ="/scripts/amazon.js"> </script>
     
     
   </head>
